# dowhiz-core-lite

./: .env.example  .gitignore  Cargo.toml  README.md  TECHNICAL_DEBT.md
.agents/skills/dowhiz-core-runtime/: SKILL.md
.agents/skills/dowhiz-inbound-email/: SKILL.md
.agents/skills/dowhiz-verification/: SKILL.md
.github/workflows/: ci.yml
containers/codex-runner/: Dockerfile  configure_codex.sh  entrypoint.sh  exec_codex.sh
docs/: inefficiencies_solved.md  scaling_and_runtime.md
run_task_module/: Cargo.toml
run_task_module/prompts/: codex_system_prompt.md
run_task_module/src/: container.rs  lib.rs  local.rs  prompt.rs  types.rs  workspace.rs
scheduler_module/: Cargo.toml
scheduler_module/frontend/: index.html  main.js  package-lock.json  package.json  styles.css  vite.config.js
scheduler_module/src/: account_registry.rs  attachment_store.rs  config.rs  inbound_email.rs  lib.rs  models.rs  queue.rs  scheduler.rs  service.rs  task_inspector.rs  worker.rs  workspace_registry.rs
send_emails_module/: Cargo.toml
send_emails_module/src/: lib.rs
